--- a/docs/css/portfolio.css
+++ b/docs/css/portfolio.css
@@ -5,22 +5,22 @@
 }
 
 body {
-font-family: 'Helvetica Neue', Arial, sans-serif;
-line-height: 1.6;
-color: #333;
-margin: 0;
-padding: 0;
+    background-color: #FFFFFF;
+    color: #333333;
+    font-family: 'Helvetica Neue', Arial, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 header {
-background-color: #003262; /* Berkeley Blue background */
-color: #FFFFFF;
-padding: 0;
-display: flex;
-align-items: center;
-justify-content: space-between;
-position: relative;
-height: 80px; /* Adjust as needed */
+    background-color: #003262; /* Berkeley Blue background */
+    color: #FFFFFF;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: fixed;
+    height: 80px; /* Adjust as needed */
 }
 
 .header-content {
