--- a/docs/css/portfolio.css
+++ b/docs/css/portfolio.css
@@ -7,6 +7,7 @@
 body {
     background-color: #FFFFFF;
     color: #333333;
+    line-height: 1.6;
     font-family: 'Helvetica Neue', Arial, sans-serif;
     margin: 0;
     padding: 0;
