--- a/docs/css/portfolio.css
+++ b/docs/css/portfolio.css
@@ -74,14 +74,11 @@ text-decoration: none;
 font-weight: bold;
 }
 
-/* main {
-max-width: 800px;
-margin: 120px auto 0;
-padding: 20px;
-} */
-
 main {
-    padding-top: 80px; /* Should match the header height */
+    max-width: 800px;
+    margin: 120px auto 0;
+    padding: 20px;
+    padding-top: 80px;
 }
 
 section {
