--- a/docs/css/portfolio.css
+++ b/docs/css/portfolio.css
@@ -96,15 +96,26 @@ main {
     max-width: 800px;
     margin: 120px auto 0;
     padding: 20px;
-    padding-top: 80px;
+    padding-top: 60px;
 }
 
 section {
-margin-bottom: 40px;
+    margin-bottom: 40px;
+    padding-top: 0; /* Remove any padding at the top */
 }
 
-h1, h2 {
-color: var(--berkeley-gold);
+section#about {
+    padding-left: 20px; /* Keep the padding to indent the text */
+    margin-top: 0; /* Remove the top margin */
+}
+
+h1 {
+    color: var(--berkeley-gold);
+}
+h2 {
+    color: var(--berkeley-gold);
+    margin-top: 0; /* Remove any top margin from the h2 */
+    padding-left: 20px; /* Add padding to indent the title */
 }
 
 .project {
