--- a/docs/css/portfolio.css
+++ b/docs/css/portfolio.css
@@ -19,7 +19,7 @@ padding: 0;
 display: flex;
 align-items: center;
 justify-content: space-between;
-position: relative;
+position: fixed;
 height: 80px; /* Adjust as needed */
 }
 
