--- a/docs/css/portfolio.css
+++ b/docs/css/portfolio.css
@@ -110,7 +110,7 @@ background-color: #003262; /* Berkeley Blue */
 color: #FFFFFF;
 text-align: center;
 padding: 10px 0;
-position: fixed;
+position: relative;
 width: 100%;
 bottom: 0;
 }
