--- a/docs/css/portfolio.css
+++ b/docs/css/portfolio.css
@@ -5,11 +5,11 @@
 }
 
 body {
-font-family: 'Helvetica Neue', Arial, sans-serif;
-line-height: 1.6;
-color: #333;
-margin: 0;
-padding: 0;
+    background-color: #FFFFFF;
+    color: #333333;
+    font-family: 'Helvetica Neue', Arial, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 header {
