--- a/docs/css/portfolio.css
+++ b/docs/css/portfolio.css
@@ -26,7 +26,7 @@ header {
     right: 0;
     z-index: 1000;
 }
-/* 
+
 .header-content {
     display: flex;
     justify-content: flex-start;
@@ -34,7 +34,7 @@ header {
     padding: 10px 20px;
     max-width: 1200px; /* or whatever max-width you prefer for your content */
     margin: 0 auto;
-} */
+}
 
 header .logo {
 height: 100%;
