--- a/docs/css/portfolio.css
+++ b/docs/css/portfolio.css
@@ -4,12 +4,13 @@
 --berkeley-gray: #DDD5C7;
 }
 
-body {
-    background-color: #FFFFFF;
-    color: #333333;
-    font-family: 'Helvetica Neue', Arial, sans-serif;
+body, html {
     margin: 0;
     padding: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
 header {
@@ -102,6 +103,7 @@ main {
     padding: 20px;
     padding-top: 80px;
     flex: 1;
+    display: flex;
 }
 
 section {
