--- a/docs/css/portfolio.css
+++ b/docs/css/portfolio.css
@@ -4,13 +4,12 @@
 --berkeley-gray: #DDD5C7;
 }
 
-body, html {
+body {
+    background-color: #FFFFFF;
+    color: #333333;
+    font-family: 'Helvetica Neue', Arial, sans-serif;
     margin: 0;
     padding: 0;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
 header {
