--- a/docs/css/portfolio.css
+++ b/docs/css/portfolio.css
@@ -10,6 +10,8 @@ body {
     font-family: 'Helvetica Neue', Arial, sans-serif;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 header {
