--- a/docs/css/portfolio.css
+++ b/docs/css/portfolio.css
@@ -22,7 +22,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position: fixed;
+    position: relative;
     height: 80px; /* Adjust as needed */
     top: 0;
     left: 0;
