--- a/docs/css/portfolio.css
+++ b/docs/css/portfolio.css
@@ -103,9 +103,10 @@ main {
     max-width: 800px;
     margin: 30px auto 0;
     padding: 20px;
-    padding-top: 80px;
-    flex: 1;
-    padding-bottom: 60px;
+    padding-top: 100px;
+    flex: 1 0 auto;
+    box-sizing: border-box;
+    min-height: calc(100vh - 100px);
 }
 
 section {
