--- a/docs/css/portfolio.css
+++ b/docs/css/portfolio.css
@@ -132,6 +132,10 @@ h2 {
     padding-left: 20px; /* Add padding to indent the title */
 }
 
+h2:first-of-type {
+    margin-top: 20px; /* Adds a bit more space above the "About Me" heading */
+}
+
 h3 {
     color: #003262; /* Berkeley Blue */
     margin-top: 20px;
